@@ -247,7 +247,6 @@ pdf: Slipher1913.pdf
 
 @article{vanderWaltEtal2011numpy,
    author = {St{\'{e}}fan van der Walt and S. Chris Colbert and Ga{\"{e}}l Varoquaux},
-    title = {The {NumPy} Array: A Structure for Efficient Numerical Computation},
   journal = {Computing in Science \& Engineering},
    volume = {13},
    number = {},
@@ -262,5 +261,13 @@ publisher = {IEEE Computer Society},
 @Misc{JonesNoYearScipy,
   author = {Eric Jones},
   title  = {{SciPy}: Scientific Python},
+}
+
+@MISC{1978windEnergyReport,
+        title = "{Wind energy systems: Program summary}",
+ howpublished = {Unknown},
+         year = 1978,
+        month = dec,
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1978wes..rept......},
 }
 
